--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,14 @@ body {
     padding: 0;
     margin-top: 6rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* background-color: brown; */
+    background-color: brown;
 }
 
 #shoe {
     background-color: rgb(100, 245, 200);
-    width: 26.9rem;
+    width: 19rem;
     /* height: 25rem; */
-    border-radius: 8px;
+    /* border-radius: 10px; */
 }
 
 img {
@@ -20,23 +20,25 @@ img {
 }
 
 .words {
-    border-radius: 8px;
+    /* border-radius: 10px; */
     background-color: rgb(255, 255, 255);
     /* height: 30rem; */
     width: 26.9rem;
     color: gray;
-    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
 #whole {
     height: 35rem;
     display: flex;
     justify-content: center;
+    border-radius: 30px;
 }
 
 #dollar {
     text-decoration: line-through;
     margin-right: 1rem;
+    margin-left: 3rem;
 }
 
 #dollar2 {
@@ -45,12 +47,14 @@ img {
 
 #word1 {
     padding: 1rem;
+    margin-left: 3rem;
 }
 
 #word2 {
     padding-top: 4rem;
     font-weight: bold;
     margin-bottom: 1.6rem;
+    margin-left: 3rem;
 }
 
 #word3 {
@@ -58,43 +62,52 @@ img {
     font-weight: bold;
     margin-bottom: 1.6rem;
     margin-top: 3rem;
+    margin-left: 3rem;
+}
+
+#mubby {
+    margin-top: 3rem;
+    font-size: xx-large;
+    margin-bottom: 1rem;
+    margin-left: 3rem;
 }
 
 .circle1 {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     border-radius: 100%;
     background-color: rgb(89, 232, 200);
     margin-right: 1rem;
+    margin-left: 3rem;
 }
 
 .circle2 {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     border-radius: 100%;
     background-color: rgb(255, 238, 113);
     margin-right: 1rem;
 }
 
 .circle3 {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     border-radius: 100%;
     background-color: rgb(102, 84, 175);
     margin-right: 1rem;
 }
 
 .circle4 {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     border-radius: 100%;
     background-color: rgb(52, 52, 52);
     margin-right: 1rem;
 }
 
 .circle5 {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     border-radius: 100%;
     background-color: rgb(223, 223, 223);
     margin-right: 1rem;
@@ -103,5 +116,13 @@ img {
 #div1 {
     display: flex;
     font-weight: bold;
-    margin-top: 5rem;
+    margin-top: 1rem;
+}
+
+#p1 {
+    margin-left: 3rem;
+}
+
+#p2 {
+    margin-left: 3rem;
 }
