--- a/css/style.css
+++ b/css/style.css
@@ -1,155 +1,192 @@
-body {
-    padding: 0;
-    margin-top: 6rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: brown;
-}
-
-#shoe {
-    background-color: rgb(100, 245, 200);
-    width: 19rem;
-    /* height: 25rem; */
-    /* border-radius: 10px; */
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-}
-
-img {
-    position: relative;
-    left: -30px;
-    width: 20.5rem;
-    margin-top: 5rem;
-}
-
-.words {
-    /* border-radius: 10px; */
-    background-color: rgb(255, 255, 255);
-    /* height: 30rem; */
-    width: 37rem;
-    color: gray;
-    margin-right: 3rem;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-}
-
-#whole {
-    height: 35rem;
-    display: flex;
-    justify-content: center;
-    /* border-radius: 30px; */
-}
-
-#dollar {
-    text-decoration: line-through;
-    margin-right: 1rem;
-    margin-left: 3rem;
-}
-
-#dollar2 {
-    color: rgb(254, 96, 103);
-}
-
-#word1 {
-    padding: 1rem;
-    margin-left: 3rem;
-}
-
-#word2 {
-    padding-top: 4rem;
-    font-weight: bold;
-    margin-bottom: 1.6rem;
-    margin-left: 3rem;
-}
-
-#word3 {
-    padding-top: 4rem;
-    font-weight: bold;
-    margin-bottom: 1.6rem;
-    margin-top: 3rem;
-    margin-left: 3rem;
-}
-
-#mubby {
-    margin-top: 3rem;
-    font-size: xx-large;
-    margin-bottom: 1rem;
-    margin-left: 3rem;
-    color: rgb(68, 68, 68);
-}
-
-.circle1 {
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 100%;
-    background-color: rgb(89, 232, 200);
-    margin-right: 1rem;
-    margin-left: 3rem;
-}
-
-.circle2 {
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 100%;
-    background-color: rgb(255, 238, 113);
-    margin-right: 1rem;
-}
-
-.circle3 {
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 100%;
-    background-color: rgb(102, 84, 175);
-    margin-right: 1rem;
-}
-
-.circle4 {
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 100%;
-    background-color: rgb(52, 52, 52);
-    margin-right: 1rem;
-}
-
-.circle5 {
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 100%;
-    background-color: rgb(223, 223, 223);
-    margin-right: 1rem;
-}
-
-#div1 {
-    display: flex;
-    font-weight: bold;
-    margin-top: 1rem;
-}
-
-#p1 {
-    margin-left: 3rem;
-}
-
-#p2 {
-    margin-left: 3rem;
-}
-
-.line1 {
-    border-left: 7px solid rgb(238, 238, 238);
-    height: 40px;
-}
-
-#mafo {
-    border-radius: 10px;
-    display: flex;
-}
-
-.star {
-    width: 90px;
-    height: 30px;
-    margin-left: 10rem;
-    margin-bottom: 4.5rem;
-}
-
-#star1 {
-    display: flex;
-    align-items: center;
-}
+    body {
+        padding: 0;
+        margin-top: 6rem;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        background-color: rgb(245, 245, 245);
+    }
+    
+    #shoe {
+        /* background-color: rgb(100, 245, 200); */
+        width: 19rem;
+        /* height: 25rem; */
+        /* border-radius: 10px; */
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+        background-image: linear-gradient(rgb(101, 247, 200), rgb(66, 201, 202));
+    }
+    
+    img {
+        position: relative;
+        left: -30px;
+        width: 20.5rem;
+        margin-top: 5rem;
+    }
+    
+    .words {
+        /* border-radius: 10px; */
+        background-color: rgb(255, 255, 255);
+        /* height: 30rem; */
+        width: 37rem;
+        color: gray;
+        margin-right: 3rem;
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+    }
+    
+    #whole {
+        height: 48rem;
+        display: flex;
+        justify-content: center;
+        /* border-radius: 30px; */
+    }
+    
+    #dollar {
+        text-decoration: line-through;
+        margin-right: 1rem;
+        margin-left: 3rem;
+    }
+    
+    #dollar2 {
+        color: rgb(254, 96, 103);
+    }
+    
+    #word1 {
+        padding: 1rem;
+        margin-left: 3rem;
+    }
+    
+    #word2 {
+        padding-top: 4rem;
+        font-weight: bold;
+        margin-bottom: 1.6rem;
+        margin-left: 3rem;
+    }
+    
+    #mubby {
+        margin-top: 3rem;
+        font-size: xx-large;
+        margin-bottom: 1rem;
+        margin-left: 3rem;
+        color: rgb(68, 68, 68);
+    }
+    
+    .circle1 {
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 100%;
+        background-color: rgb(89, 232, 200);
+        margin-right: 0.5rem;
+        margin-left: 3rem;
+    }
+    
+    .circle2 {
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 100%;
+        background-color: rgb(255, 238, 113);
+        margin-right: 0.5rem;
+    }
+    
+    .circle3 {
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 100%;
+        background-color: rgb(102, 84, 175);
+        margin-right: 0.5rem;
+    }
+    
+    .circle4 {
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 100%;
+        background-color: rgb(52, 52, 52);
+        margin-right: 0.5rem;
+    }
+    
+    .circle5 {
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 100%;
+        background-color: rgb(223, 223, 223);
+        margin-right: 0.5rem;
+    }
+    
+    #div1 {
+        display: flex;
+        font-weight: bold;
+        margin-top: 1rem;
+        /* margin-top: -1rem; */
+    }
+    
+    .circles {
+        display: flex;
+        font-weight: bold;
+        margin-top: 1rem;
+        margin-top: -1rem;
+    }
+    
+    #p1 {
+        margin-left: 3rem;
+        line-height: 2.4;
+    }
+    
+    #p2 {
+        margin-left: 3rem;
+        /* margin-top: -4rem; */
+    }
+    
+    #mafo {
+        border-radius: 10px;
+        display: flex;
+    }
+    
+    .star {
+        width: 90px;
+        height: 30px;
+        margin-left: 10rem;
+        margin-bottom: 4.5rem;
+    }
+    
+    #star1 {
+        display: flex;
+        align-items: center;
+    }
+    
+    .word3 {
+        padding-top: 4rem;
+        font-weight: bold;
+        margin-bottom: 1.6rem;
+        margin-top: 3rem;
+        margin-left: 3rem;
+    }
+    
+    .csq {
+        display: flex;
+    }
+    
+    .size {
+        padding-top: 4rem;
+        font-weight: bold;
+        margin-bottom: 1.6rem;
+        margin-top: 3rem;
+        margin-left: 3rem;
+        padding-left: 10rem;
+    }
+    
+    .button {
+        background-image: linear-gradient(rgb(255, 125, 105), rgb(255, 66, 100));
+        width: 10rem;
+        height: 3rem;
+        border-radius: 5px;
+        border: none;
+        color: white;
+        text-align: center;
+        margin-top: 8rem;
+        margin-left: 3rem;
+        cursor: pointer;
+    }
+    
+    .cart_image {
+        margin-left: 32rem;
+        margin-top: -2.3rem;
+    }
